# onika

./: .cproject  .project  CMakeLists.txt  Makefile  README.md
PVCompressionPlugin/: CMakeLists.txt  Onika.xml  backup.cxx  genugriddesc.cxx  meshcompress.cpp  meshcompress.cxx  ugriddesc.h  vtkDataArrayWrapper.h  vtkMeshWrapper.h  vtkOnikaWriter.cxx  vtkOnikaWriter.h  vtkUGridDescription.cxx  vtkUGridDescription.h  vtkUGridSMeshCompress.cxx  vtkUGridSMeshCompress.h  vtkarraywrapper.h  vtkugridtetrawrapper.h
PVCompressionPlugin/Tests/: CMakeLists.txt  compress_ugrid_tetra.cxx  data_array_wrapper.cxx  genugriddesc.cxx  ugrid_tetra.cxx
PVCompressionPlugin/jit/: ugridsmeshcompress.cxx
Tests/: CMakeLists.txt  array_wrapper.cpp  onika_aabb_TEST.cpp  onika_algorithm_rbtree_TEST.cpp  onika_bits_TEST.cpp  onika_codec_asciistream_TEST.cpp  onika_codec_bitstream_TEST.cpp  onika_codec_debugstream_TEST.cpp  onika_codec_encoding_TEST.cpp  onika_codec_inputbitstream_TEST.cpp  onika_codec_nullstream_TEST.cpp  onika_codec_outputbitstream_TEST.cpp  onika_codec_streamdup_TEST.cpp  onika_codec_types_TEST.cpp  onika_compress_edgecompress_TEST.cpp  onika_container_bitarray_TEST.cpp  onika_container_containertraits_TEST.cpp  onika_container_journalizedvector_TEST.cpp  onika_container_nbitsvector_TEST.cpp  onika_container_quantizedvector_TEST.cpp  onika_container_sequence_TEST.cpp  onika_container_serialvec_TEST.cpp  onika_container_tuplevec_TEST.cpp  onika_debug_dbgassert_TEST.cpp  onika_debug_dbgmessage_TEST.cpp  onika_it_type_TEST.cpp  onika_kdtree_TEST.cpp  onika_mesh_cell2vertex_TEST.cpp  onika_mesh_edgecollapse_TEST.cpp  onika_mesh_meshalgorithm_TEST.cpp  onika_mesh_simplicialmesh_TEST.cpp  onika_mesh_vertex2cell_TEST.cpp  onika_poweroftwo_TEST.cpp  onika_quantize_lossydoublequantizer_TEST.cpp  onika_tuple_TEST.cpp  onika_valuetraits_TEST.cpp  onika_vec_TEST.cpp  onika_vtk_readvtkascii_TEST.cpp  rbtree_indexed_values.cpp  tuple_math.cpp  (+1 more)
data/: comb-hex.vtk  comb-tet.vtk  cut.vtk  simul.vtk  surftest.vtk
doc/: README.txt  TODO.txt  git_config.sh
include/onika/: aabb.h  bits.h  it_type.h  kdtree.h  language.h  mathfunc.h  poweroftwo.h  sysio.h  tuple.h  valuetraits.h  vec.h
include/onika/algorithm/: basics.h  rbtree.h
include/onika/codec/: asciistream.h  bitstream.h  debugstream.h  encoding.h  inputbitstream.h  nullstream.h  outputbitstream.h  outputtokenstream.h  streamdup.h  types.h
include/onika/compress/: edgecompress.h
include/onika/container/: .containertraits.h.swp  algorithm.h  arraywrapper.h  bitarray.h  containertraits.h  iterator.h  journalizedvector.h  nbitsvector.h  quantizedvector.h  sequence.h  serialvec.h  tuplevec.h  zipvec.h
include/onika/debug/: dbgassert.h  dbgmessage.h
include/onika/mesh/: abstractmesh.h  cell2edge.h  cell2vertex.h  edgecollapse.h  meshalgorithm.h  simplicialmesh.h  vertex2cell.h
include/onika/quantize/: lossydoublequantizer.h
include/onika/vtk/: readvtkascii.h  ugridtetrawrapper.h
jitsrc/: CMakeLists.txt  ugridsmeshcompress.cxx
jitti/: CMakeLists.txt  jitti.cpp  jitti.h
jitti/Tests/: CMakeLists.txt  main.cpp  simplecpp11.cxx
jitti/Tests/data/: CMakeLists.txt  simplecpp11.cxx
scripts/: cleanup.sh  genBaseTests.sh
src/: meshcompress.cpp
src/Tests/: onika_aabb_TEST.cpp  onika_algori_TESTm_rbtree_TEST.cpp  onika_algorithm_rbtree_TEST.cpp  onika_bits_TEST.cpp  onika_codec_asciistream_TEST.cpp  onika_codec_bitstream_TEST.cpp  onika_codec_debugstream_TEST.cpp  onika_codec_encoding_TEST.cpp  onika_codec_inputbitstream_TEST.cpp  onika_codec_nullstream_TEST.cpp  onika_codec_outputbitstream_TEST.cpp  onika_codec_streamdup_TEST.cpp  onika_codec_types_TEST.cpp  onika_compress_edgecompress_TEST.cpp  onika_container_algori_TESTm_TEST.cpp  onika_container_algorithm_TEST.cpp  onika_container_bitarray_TEST.cpp  onika_container_containertraits_TEST.cpp  onika_container_iterator_TEST.cpp  onika_container_journalizedvector_TEST.cpp  onika_container_nbitsvector_TEST.cpp  onika_container_quantizedvector_TEST.cpp  onika_container_sequence_TEST.cpp  onika_container_serialvec_TEST.cpp  onika_container_tuplevec_TEST.cpp  onika_container_zipvec_TEST.cpp  onika_debug_dbgassert_TEST.cpp  onika_debug_dbgmessage_TEST.cpp  onika_it_type_TEST.cpp  onika_kdtree_TEST.cpp  onika_language_TEST.cpp  onika_ma_TESTfunc_TEST.cpp  onika_mathfunc_TEST.cpp  onika_me_TEST_cell2edge_TEST.cpp  onika_me_TEST_cell2vertex_TEST.cpp  onika_me_TEST_edgecollapse_TEST.cpp  onika_me_TEST_me_TESTalgori_TESTm_TEST.cpp  onika_me_TEST_simplicialme_TEST_TEST.cpp  onika_me_TEST_vertex2cell_TEST.cpp  onika_mesh_cell2edge_TEST.cpp  (+7 more)
under_construction/: btreebitparser.h  kdtreehalfsplit.h  ovmesh.h
