add_executable(onika_aabb_TEST onika_aabb_TEST.cpp)
add_executable(onika_algorithm_rbtree_TEST onika_algorithm_rbtree_TEST.cpp)
add_executable(onika_bits_TEST onika_bits_TEST.cpp)
add_executable(onika_codec_asciistream_TEST onika_codec_asciistream_TEST.cpp)
add_executable(onika_codec_debugstream_TEST onika_codec_debugstream_TEST.cpp)
add_executable(onika_codec_encoding_TEST onika_codec_encoding_TEST.cpp)
add_executable(onika_codec_inputbitstream_TEST onika_codec_inputbitstream_TEST.cpp)
add_executable(onika_codec_nullstream_TEST onika_codec_nullstream_TEST.cpp)
add_executable(onika_codec_outputbitstream_TEST onika_codec_outputbitstream_TEST.cpp)
add_executable(onika_codec_streamdup_TEST onika_codec_streamdup_TEST.cpp)
add_executable(onika_codec_types_TEST onika_codec_types_TEST.cpp)
add_executable(onika_compress_edgecompress_TEST onika_compress_edgecompress_TEST.cpp)
add_executable(onika_container_algorithm_TEST onika_container_algorithm_TEST.cpp)
add_executable(onika_container_bitarray_TEST onika_container_bitarray_TEST.cpp)
add_executable(onika_container_iterator_TEST onika_container_iterator_TEST.cpp)
add_executable(onika_container_journalizedvector_TEST onika_container_journalizedvector_TEST.cpp)
add_executable(onika_container_nbitsvector_TEST onika_container_nbitsvector_TEST.cpp)
add_executable(onika_container_quantizedvector_TEST onika_container_quantizedvector_TEST.cpp)
add_executable(onika_container_sequence_TEST onika_container_sequence_TEST.cpp)
add_executable(onika_container_tuplevec_TEST onika_container_tuplevec_TEST.cpp)
add_executable(onika_debug_dbgassert_TEST onika_debug_dbgassert_TEST.cpp)
add_executable(onika_debug_dbgmessage_TEST onika_debug_dbgmessage_TEST.cpp)
add_executable(onika_it_type_TEST onika_it_type_TEST.cpp)
add_executable(onika_kdtree_TEST onika_kdtree_TEST.cpp)
add_executable(onika_language_TEST onika_language_TEST.cpp)
add_executable(onika_mathfunc_TEST onika_mathfunc_TEST.cpp)
add_executable(onika_mesh_cell2edge_TEST onika_mesh_cell2edge_TEST.cpp)
add_executable(onika_mesh_cell2vertex_TEST onika_mesh_cell2vertex_TEST.cpp)
add_executable(onika_mesh_edgecollapse_TEST onika_mesh_edgecollapse_TEST.cpp)
add_executable(onika_mesh_meshalgorithm_TEST onika_mesh_meshalgorithm_TEST.cpp)
add_executable(onika_mesh_simplicialmesh_TEST onika_mesh_simplicialmesh_TEST.cpp)
add_executable(onika_mesh_vertex2cell_TEST onika_mesh_vertex2cell_TEST.cpp)
add_executable(onika_poweroftwo_TEST onika_poweroftwo_TEST.cpp)
add_executable(onika_quantize_lossydoublequantizer_TEST onika_quantize_lossydoublequantizer_TEST.cpp)
add_executable(onika_tuple_TEST onika_tuple_TEST.cpp)
add_executable(onika_valuetraits_TEST onika_valuetraits_TEST.cpp)
add_executable(rbtree_indexed_values rbtree_indexed_values.cpp)
add_executable(tuple_math_TEST tuple_math.cpp)
add_executable(tuplevec_math_TEST tuplevec_math.cpp)
add_executable(array_wrapper_TEST array_wrapper.cpp)
